log/build_2021-10-23_05-30-50/publisher3431/stderr.log
  File "/home/rsa2021/py_pub_sub/install/publisher3431/lib/python3.8/site-packages/publisher3431/subscriber_ass2.py", line 81
    self.get_logger().info("{0} {1} {2} {3}".format(thetha,self.global_scan,centre[0],k[0])))
                                                                                            ^
SyntaxError: unmatched ')'

